# imau

./: CMakeLists.txt  package.xml
include/imau_control/: Arm_interface.hpp  Arm_interface_sim.hpp  Controller_hardware.hpp
launch/: imau_control.launch  sw.launch  teste_separate_controllers.launch
src/: Arm_interface.cpp  Arm_interface_sim.cpp  Controller_hardware .cpp  Controller_hardware.cpp  arm_interface_node.cpp
